--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,7 @@
   <button type="button" class="btn btn-dark">Dark</button>
 
   <button type="button" class="btn btn-link">Link</button>
+
+  <button type="button" class="btn btn-xxx-color">link</button>
 </body>
 </html>
