--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>webpack - bootstrap</title>
 </head>
 <body>
+  <h1 class="custom-element">frontend</h1>
   <button type="button" class="btn btn-primary">Primary</button>
   <button type="button" class="btn btn-secondary">Secondary</button>
   <button type="button" class="btn btn-success">Success</button>
