--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>webpack - bootstrap</title>
 </head>
 <body>
-  <h1 class="custom-element">frontend</h1>
+  <h1 class="test-title-2">frontend</h1>
   <button type="button" class="btn btn-primary">Primary</button>
   <button type="button" class="btn btn-secondary">Secondary</button>
   <button type="button" class="btn btn-success">Success</button>
@@ -20,5 +20,6 @@
   <button type="button" class="btn btn-link">Link</button>
 
   <button type="button" class="btn btn-xxx-color">link</button>
+  <div class="desc">coleeee</div>
 </body>
 </html>
