--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,6 @@
   <button type="button" class="btn btn-link">Link</button>
 
   <button type="button" class="btn btn-xxx-color">link</button>
-  <div class="desc">coleeee</div>
+  <h1 class="desc">root css color import root scss</h1>
 </body>
 </html>
