--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>webpack - bootstrap</title>
 </head>
+
 <body>
   <h1 class="test-title-2">frontend</h1>
-  <button type="button" class="btn btn-primary">Primary</button>
+  <!-- <button type="button" class="btn btn-primary">Primary</button>
   <button type="button" class="btn btn-secondary">Secondary</button>
   <button type="button" class="btn btn-success">Success</button>
   <button type="button" class="btn btn-danger">Danger</button>
@@ -20,6 +22,10 @@
   <button type="button" class="btn btn-link">Link</button>
 
   <button type="button" class="btn btn-xxx-color">link</button>
-  <h1 class="desc">root css color import root scss</h1>
+  <h1 class="desc">root css color import root scss</h1> -->
+  <p class="text-lg-start text-sm-center text-md-end">Start aligned text on all viewport sizes.</p>
+  <p class="text-center">Center aligned text on all viewport sizes.</p>
+  <p class="text-end">End aligned text on all viewport sizes.</p>
 </body>
+
 </html>
