--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,37 @@
 
   <button type="button" class="btn btn-xxx-color">link</button>
   <h1 class="desc">root css color import root scss</h1> -->
+
+
+  <!-- 7-1 -->
   <p class="text-lg-start text-sm-center text-md-end">Start aligned text on all viewport sizes.</p>
   <p class="text-center">Center aligned text on all viewport sizes.</p>
   <p class="text-end">End aligned text on all viewport sizes.</p>
+
+  <!-- 7-2 -->
+    <!-- <div class="container box"></div>
+
+    <div class="container-lg box"></div>
+
+    <div class="custom-container box"></div> -->
+
+    <!-- 7-3 -->
+    <div class="container">
+      <div class="row row-cols-4">
+        <!-- <div class="col box">column</div> -->
+        <!-- <div class="col col-lg-10 box2">column</div> -->
+        <!-- <div class="col box3">column</div>
+        <div class="col box">column</div> 
+        <div class="col box2">column</div> -->
+
+        <div class="col box">colume</div>
+        <div class="col box2">colume</div>
+        <div class="col box3">colume</div>
+        <div class="col box">colume</div>
+        <div class="col box3">colume</div>
+        <div class="col box">colume</div>
+      </div>
+    </div>
 </body>
 
 </html>
