--- a/src/index.html
+++ b/src/index.html
@@ -38,13 +38,13 @@
     <div class="custom-container box"></div> -->
 
     <!-- 7-3 -->
-    <div class="container">
+    <!-- <div class="container">
       <div class="row row-cols-4">
-        <!-- <div class="col box">column</div> -->
-        <!-- <div class="col col-lg-10 box2">column</div> -->
-        <!-- <div class="col box3">column</div>
+        <div class="col box">column</div>
+        <div class="col col-lg-10 box2">column</div>
+        <div class="col box3">column</div>
         <div class="col box">column</div> 
-        <div class="col box2">column</div> -->
+        <div class="col box2">column</div>
 
         <div class="col box">colume</div>
         <div class="col box2">colume</div>
@@ -52,6 +52,14 @@
         <div class="col box">colume</div>
         <div class="col box3">colume</div>
         <div class="col box">colume</div>
+      </div>
+    </div> -->
+    <!-- 7-4 -->
+    <div class="container">
+      <div class="row row-cols-2">
+        <div class="col box order-5">column</div>
+        <div class="col box2 order-1">column</div>
+        <div class="col box3 order-2">column</div>
       </div>
     </div>
 </body>
