--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1 class="test-title-2">frontend</h1>
+  <!-- <h1 class="test-title-2">frontend</h1> -->
   <!-- <button type="button" class="btn btn-primary">Primary</button>
   <button type="button" class="btn btn-secondary">Secondary</button>
   <button type="button" class="btn btn-success">Success</button>
@@ -26,19 +26,19 @@
 
 
   <!-- 7-1 -->
-  <p class="text-lg-start text-sm-center text-md-end">Start aligned text on all viewport sizes.</p>
-  <p class="text-center">Center aligned text on all viewport sizes.</p>
-  <p class="text-end">End aligned text on all viewport sizes.</p>
+  <!-- <p class="text-lg-start text-sm-center text-md-end">Start aligned text on all viewport sizes.</p> -->
+  <!-- <p class="text-center">Center aligned text on all viewport sizes.</p> -->
+  <!-- <p class="text-end">End aligned text on all viewport sizes.</p> -->
 
   <!-- 7-2 -->
-    <!-- <div class="container box"></div>
+  <!-- <div class="container box"></div>
 
     <div class="container-lg box"></div>
 
     <div class="custom-container box"></div> -->
 
-    <!-- 7-3 -->
-    <!-- <div class="container">
+  <!-- 7-3 -->
+  <!-- <div class="container">
       <div class="row row-cols-4">
         <div class="col box">column</div>
         <div class="col col-lg-10 box2">column</div>
@@ -54,14 +54,45 @@
         <div class="col box">colume</div>
       </div>
     </div> -->
-    <!-- 7-4 -->
-    <div class="container">
+  <!-- 7-4 -->
+  <!-- <div class="container">
       <div class="row row-cols-2">
         <div class="col box order-5">column</div>
         <div class="col box2 order-1">column</div>
         <div class="col box3 order-2">column</div>
       </div>
+    </div> -->
+
+  <!-- <div class="container">
+    <div class="row">
+      <div class="col box">column</div>
+      <div class="col box2">column</div>
+      <div class="col box3 offset-3">column</div>
     </div>
+  </div> -->
+
+  <div class="container">
+    <div class="row g-2 g-lg-5">
+      <div class="col-4">
+        <p class="box">BOX1</p>
+      </div>
+      <div class="col-4">
+        <p class="box2">BOX2</p>
+      </div>
+      <div class="col-4">
+        <p class="box3">BOX3</p>
+      </div>
+      <div class="col-4">
+        <p class="box">BOX1</p>
+      </div>
+      <div class="col-4">
+        <p class="box2">BOX2</p>
+      </div>
+      <div class="col-4">
+        <p class="box3">BOX3</p>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
