--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,8 @@
       <div class="col box3 offset-3">column</div>
     </div>
   </div> -->
-
-  <div class="container">
+  <!-- 7-5-6 -->
+  <!-- <div class="container">
     <div class="row g-2 g-lg-5">
       <div class="col-4">
         <p class="box">BOX1</p>
@@ -92,7 +92,15 @@
         <p class="box3">BOX3</p>
       </div>
     </div>
+  </div> -->
+
+  <!-- 7-7 -->
+  <div class="grid">
+    <div class="g-col-4 box">g-col-4</div>
+    <div class="g-col-4 g-col-lg-6 box2">g-col-4</div>
+    <div class="g-col-4 box3">g-col-4</div>
   </div>
+
 </body>
 
 </html>
