--- a/src/index.html
+++ b/src/index.html
@@ -95,12 +95,32 @@
   </div> -->
 
   <!-- 7-7 -->
-  <div class="grid">
+  <!-- <div class="grid">
     <div class="g-col-4 box">g-col-4</div>
     <div class="g-col-4 g-col-lg-6 box2">g-col-4</div>
     <div class="g-col-4 box3">g-col-4</div>
+  </div> -->
+  <!-- <div class="grid">
+    <div class="g-col-4 g-start-8 box">g-col-4</div>
+  </div> -->
+  <!-- <div class="grid" style="--bs-columns:3">
+    <div>1</div>
+    <div>1</div>
+    <div>1</div>
+    <div>1</div>
+    <div>1</div>
+    <div>1</div>
+    <div>1</div>
+    <div>1</div>
+    <div>1</div>
+    <div>1</div>
+  </div> -->
+  
+  <div class="grid" style="--bs-columns: 3; --bs-gap:10rem;">
+    <div class="box">g-col-4</div>
+    <div class="box2">g-col-4</div>
+    <div class="box3">g-col-4</div>
   </div>
-
 </body>
 
 </html>
