--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <title>webpack - bootstrap</title>
 </head>
 
-<body>
+<body class="bg-dark d-flex justify-content-center align-items-center vh-100">
   <!-- <h1 class="test-title-2">frontend</h1> -->
   <!-- <button type="button" class="btn btn-primary">Primary</button>
   <button type="button" class="btn btn-secondary">Secondary</button>
@@ -115,12 +115,16 @@
     <div>1</div>
     <div>1</div>
   </div> -->
-  
+<!--   
   <div class="grid" style="--bs-columns: 3; --bs-gap:10rem;">
     <div class="box">g-col-4</div>
     <div class="box2">g-col-4</div>
     <div class="box3">g-col-4</div>
-  </div>
+  </div> -->
+
+<div class="shadow-lg w-50 p-5 bg-light">
+  <p class="text-black-50 mb-0 text-center display-6">PeterChen Frontend</p>
+</div>
 </body>
 
 </html>
