--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
   </div> -->
 
   <div class="shadow-lg w-50 p-5 bg-light">
-  <p class="text-black-50 mb-0 text-center display-6 cursor-poniter">PeterChen Frontend</p>
+  <p class="text-black-50 mb-0 text-center display-6 cursor-pointer">PeterChen Frontend</p>
 </div>
 
 
