--- a/src/index.html
+++ b/src/index.html
@@ -123,11 +123,9 @@
     <div class="box3">g-col-4</div>
   </div> -->
 
-  <div class="shadow-lg w-50 p-5 bg-light">
-  <p class="text-black-50 mb-0 text-center display-6 cursor-pointer">PeterChen Frontend</p>
-</div>
-
-
+  <div class="shadow-lg p-5 bg-light w-300px border-lg border-lg-5">
+    <p class="ml-5 text-black-50 mb-0 text-center display-6 cursor-pointer">PeterChen</p>
+  </div>
 </body>
 
 </html>
