--- a/src/index.html
+++ b/src/index.html
@@ -291,7 +291,7 @@
   </div> -->
 
   <!-- alert -->
-  <h3 class="my-4">單元 2 - Alert 是一條提醒或警告</h3>
+  <!-- <h3 class="my-4">單元 2 - Alert 是一條提醒或警告</h3>
   <div class="alert alert-primary" role="alert">
     A simple primary alert—check it out!
   </div>
@@ -410,7 +410,16 @@
   <div id="alertCustom" class="alert alert-warning" role="alert">
     alertCustom
     <button id="alertCustomBtn" class="btn btn-dark">關閉</button>
-  </div>
+  </div> -->
+
+  <h3 class="my-4">Badge 訊息999小題醒</h3>
+
+  <h1>Example heading <span class="badge bg-secondary">New</span></h1>
+  <h2>Example heading <span class="badge bg-secondary">New</span></h2>
+  <h3>Example heading <span class="badge bg-secondary">New</span></h3>
+  <h4>Example heading <span class="badge bg-secondary">New</span></h4>
+  <h5>Example heading <span class="badge bg-secondary">New</span></h5>
+  <h6>Example heading <span class="badge bg-secondary">New</span></h6>
 </body>
 
 </html>
