--- a/src/index.html
+++ b/src/index.html
@@ -420,6 +420,51 @@
   <h4>Example heading <span class="badge bg-secondary">New</span></h4>
   <h5>Example heading <span class="badge bg-secondary">New</span></h5>
   <h6>Example heading <span class="badge bg-secondary">New</span></h6>
+
+  <h3 class="my-4">跟按鈕結合</h3>
+  <button type="button" class="btn btn-primary">
+    Notifications <span class="badge bg-secondary">4</span>
+  </button>
+
+  <h3 class="my-4">搭配絕對定位實現通知模式</h3>
+
+  <button type="button" class="btn btn-primary position-relative">
+    Inbox
+    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+      99+
+      <span class="visually-hidden">unread messages</span>
+    </span>
+  </button>
+
+  <br>
+  <br>
+
+  <button type="button" class="btn btn-primary position-relative">
+    Profile
+    <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+      <span class="visually-hidden">New alerts</span>
+    </span>
+  </button>
+
+  <h3 class="my-4">各種背景顏色</h3>
+  <span class="badge bg-primary">Primary</span>
+  <span class="badge bg-secondary">Secondary</span>
+  <span class="badge bg-success">Success</span>
+  <span class="badge bg-danger">Danger</span>
+  <span class="badge bg-warning text-dark">Warning</span>
+  <span class="badge bg-info text-dark">Info</span>
+  <span class="badge bg-light text-dark">Light</span>
+  <span class="badge bg-dark">Dark</span>
+
+  <h3 class="my-4">圓形標籤</h3>
+  <span class="badge rounded-pill bg-primary">Primary</span>
+  <span class="badge rounded-pill bg-secondary">Secondary</span>
+  <span class="badge rounded-pill bg-success">Success</span>
+  <span class="badge rounded-pill bg-danger">Danger</span>
+  <span class="badge rounded-pill bg-warning text-dark">Warning</span>
+  <span class="badge rounded-pill bg-info text-dark">Info</span>
+  <span class="badge rounded-pill bg-light text-dark">Light</span>
+  <span class="badge rounded-pill bg-dark">Dark</span>
 </body>
 
 </html>
