--- a/src/index.html
+++ b/src/index.html
@@ -465,6 +465,18 @@
   <span class="badge rounded-pill bg-info text-dark">Info</span>
   <span class="badge rounded-pill bg-light text-dark">Light</span>
   <span class="badge rounded-pill bg-dark">Dark</span>
+
+  <!-- buttons -->
+  <h1 class="my-4">Button 漂亮的按鈕們</h1>
+  <button type="button" class="btn btn-primary">Primary</button>
+  <button type="button" class="btn btn-secondary">Secondary</button>
+  <button type="button" class="btn btn-success">Success</button>
+  <button type="button" class="btn btn-danger">Danger</button>
+  <button type="button" class="btn btn-warning">Warning</button>
+  <button type="button" class="btn btn-info">Info</button>
+  <button type="button" class="btn btn-light">Light</button>
+  <button type="button" class="btn btn-dark">Dark</button>
+  <button type="button" class="btn btn-link">Link</button>
 </body>
 
 </html>
