--- a/src/index.html
+++ b/src/index.html
@@ -3342,7 +3342,7 @@
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
         <label class="form-check-label" for="invalidCheck2">
-          Agree to terms and conditions
+          Agree to terms and conditionsf
         </label>
       </div>
     </div>
